--- a/package.json
+++ b/package.json
@@ -2,14 +2,30 @@
   "name": "pingpoet-www",
   "private": true,
   "scripts": {
-    "build": "npx @11ty/eleventy",
-    "start": "npx @11ty/eleventy --serve"
+    "clean": "rm -rf _site",
+    "build": "npm run clean; run-p build:*",
+    "build:11ty": "npx @11ty/eleventy",
+    "build:css": "parcel build --dist-dir _site/style source-files/style/style.scss",
+    "build:js": "parcel build --dist-dir _site/js source-files/js/main.js",
+    "start": "npm run clean; run-p watch:*",
+    "watch:css": "parcel watch --dist-dir _site/style source-files/style/style.scss",
+    "watch:js": "parcel watch --dist-dir _site/js source-files/js/main.js",
+    "watch:11ty": "npx @11ty/eleventy --serve"
   },
   "license": "ISC",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
     "@jamshop/eleventy-plugin-mdx": "^0.0.17",
+    "@parcel/transformer-sass": "^2.7.0",
+    "npm-run-all": "^4.1.5",
+    "parcel": "^2.7.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.1"
   }
 }
