--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
     "@11ty/eleventy": "^1.0.2",
-    "@jamshop/eleventy-plugin-mdx": "^0.0.17",
+    "@jamshop/eleventy-plugin-mdx": "github:activescott/eleventy-plugin-mdx#latest",
     "@parcel/transformer-sass": "^2.7.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.7.0",
