fix: render markdown on features layout page
how-we-do-it has an example of failed render

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build:js": "parcel build --dist-dir _site/js source-files/js/main.js",
     "build:images": "parcel build --dist-dir _site/images source-files/images/**/*",
     "start": "npm run clean; run-p watch:*",
-    "watch:css": "parcel watch --dist-dir _site/style source-files/style/style.scss",
-    "watch:js": "parcel watch --dist-dir _site/js source-files/js/main.js",
-    "watch:images": "parcel watch --dist-dir _site/images source-files/images/**/*",
+    "watch:css": "parcel watch --no-hmr --dist-dir _site/style source-files/style/style.scss",
+    "watch:js": "parcel watch --no-hmr --dist-dir _site/js source-files/js/main.js",
+    "watch:images": "parcel watch --no-hmr --dist-dir _site/images source-files/images/**/*",
     "watch:11ty": "npx @11ty/eleventy --serve"
   },
   "license": "ISC",
@@ -24,7 +24,8 @@
     "parcel": "^2.7.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-remark": "^2.1.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
