fix: add SEO og/twitter semantic tags

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch:js": "parcel watch --no-hmr --dist-dir _site/js source-files/js/main.js",
     "watch:images": "parcel watch --no-hmr --dist-dir _site/images source-files/images/**/*",
     "watch:11ty": "npx @11ty/eleventy --watch",
-    "//watch:serve":"We use serve instead of 11ty because it's more prod-like and specifically it serves .js files which 11ty dev server doesn't.",
+    "//watch:serve": "We use serve instead of 11ty because it's more prod-like and specifically it serves .js files which 11ty dev server doesn't.",
     "watch:serve": "npx serve _site"
   },
   "license": "ISC",
@@ -22,6 +22,7 @@
     "@11ty/eleventy": "^1.0.2",
     "@jamshop/eleventy-plugin-mdx": "github:activescott/eleventy-plugin-mdx#latest",
     "@parcel/transformer-sass": "^2.7.0",
+    "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.7.0",
     "process": "^0.11.10",
