--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "clean": "rm -rf _site",
     "build": "npm run clean; run-p build:*",
     "build:11ty": "npx @11ty/eleventy",
-    "build:css": "parcel build --dist-dir _site/style source-files/style/style.scss",
-    "build:js": "parcel build --dist-dir _site/js source-files/js/main.js",
-    "build:images": "parcel build --dist-dir _site/images source-files/images/**/*",
+    "build:css": "parcel build --dist-dir _site/style content/style/style.scss",
+    "build:js": "parcel build --dist-dir _site/js content/js/main.js",
+    "build:images": "parcel build --dist-dir _site/images content/images/**/*",
     "start": "npm run clean; run-p watch:*",
-    "watch:css": "parcel watch --no-hmr --dist-dir _site/style source-files/style/style.scss",
-    "watch:js": "parcel watch --no-hmr --dist-dir _site/js source-files/js/main.js",
-    "watch:images": "parcel watch --no-hmr --dist-dir _site/images source-files/images/**/*",
+    "watch:css": "parcel watch --no-hmr --dist-dir _site/style content/style/style.scss",
+    "watch:js": "parcel watch --no-hmr --dist-dir _site/js content/js/main.js",
+    "watch:images": "parcel watch --no-hmr --dist-dir _site/images content/images/**/*",
     "watch:11ty": "npx @11ty/eleventy --watch",
     "//watch:serve": "We use serve instead of 11ty because it's more prod-like and specifically it serves .js files which 11ty dev server doesn't.",
     "watch:serve": "npx serve _site"
@@ -19,7 +19,7 @@
   "license": "ISC",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy": "^2.0.1",
     "@jamshop/eleventy-plugin-mdx": "github:activescott/eleventy-plugin-mdx#latest",
     "@parcel/transformer-sass": "^2.7.0",
     "js-yaml": "^4.1.0",
